--- a/style.scss
+++ b/style.scss
@@ -20,10 +20,14 @@ a {
 }
 
 .ct {
-    padding:    40px;
+    width: 20%;
+    min-width: 250px;
+    min-height: 100vh;
+    padding: 40px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 3px 0px;
     div + div {
-        margin-top: 20px;
-        padding-top: 20px;
+        margin-top: 25px;
+        padding-top: 25px;
         border-top: 1px solid rgb(238, 242, 244);
     }
 }
@@ -32,18 +36,38 @@ a {
     display: block;
     padding: 10px;
     font-size: 11px;
+    color: rgba(80,80,80);
 }
 
 .c_cnt, .link_tit {
     display: none;
 }
 
-.ct a.link_sub_item {
-    padding-left: 16px;
+.sub_category_list {
+    margin:0 0px 0px 20px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 0 5px 5px 5px;
+    a {
+        color: #fff!important;
+        font-size: 10px!important;
+    }
 }
 
 .side_title {
-    margin-bottom: 10px;
-    font-size: 12px;
+    margin-bottom: 15px;
+    font-size: 11px;
     letter-spacing: -.8px;
+    font-weight: 500;
+}
+
+.search {
+    input {
+        width: 100%;
+        outline: none;
+        border: none 0;
+        padding: 10px;
+        font-family: $font-family;
+        font-size: 10px;
+        color: rgba(150,150,150);
+    }
 }
