--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  display: flex;
   font-family: "Inter", Pretendard;
   font-size: 12px;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+.wrap {
+  height: 100%;
+  display: flex;
 }
 
 ul, ol, li {
@@ -18,11 +30,14 @@ a {
 }
 
 .ct {
+  background-color: #fff;
   width: 20%;
-  min-width: 250px;
-  min-height: 100vh;
+  width: 240px;
   padding: 40px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 3px 0px;
+  height: 100%;
+  overflow-y: scroll;
+  /*box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 3px 0px;*/
+  border-right: 1px solid rgb(238, 242, 244);
 }
 .ct div + div {
   margin-top: 25px;
@@ -30,9 +45,24 @@ a {
   border-top: 1px solid rgb(238, 242, 244);
 }
 
+.ct::-webkit-scrollbar {
+  width: 0px; /* 스크롤바의 너비 */
+}
+
+.ct::-webkit-scrollbar-thumb {
+  height: 30%; /* 스크롤바의 길이 */
+  background: #8e8e8e; /* 스크롤바의 색상 */
+  border-radius: 10px;
+}
+
+.ct::-webkit-scrollbar-track {
+  background: rgba(6, 44, 98, 0.1); /*스크롤바 뒷 배경 색상*/
+}
+
 .ct a:not(.link_tit) {
   display: block;
   padding: 10px;
+  padding-left: 16px;
   font-size: 11px;
   color: rgb(80, 80, 80);
 }
@@ -42,20 +72,30 @@ a {
 }
 
 .sub_category_list {
-  margin: 0 0px 0px 20px;
-  background-color: rgb(0, 0, 0);
-  border-radius: 0 5px 5px 5px;
+  margin: 5px 0px 5px 16px;
+  border-left: 1px dashed rgb(226, 226, 226);
 }
 .sub_category_list a {
-  color: #fff !important;
   font-size: 10px !important;
+  padding-left: 18px !important;
 }
 
 .side_title {
+  display: flex;
+  align-items: center;
   margin-bottom: 15px;
   font-size: 11px;
   letter-spacing: -0.8px;
   font-weight: 500;
+}
+.side_title i {
+  font-size: 7px;
+  margin-right: 10px;
+  /* margin-bottom: 0px; */
+  vertical-align: baseline;
+  color: #333;
+  display: flex;
+  align-items: center;
 }
 
 .search input {
@@ -63,7 +103,24 @@ a {
   outline: none;
   border: none 0;
   padding: 10px;
+  padding-left: 16px;
   font-family: "Inter", Pretendard;
   font-size: 10px;
   color: rgb(150, 150, 150);
+}
+
+.main .title {
+  font-size: 46px;
+  letter-spacing: -4px;
+  font-weight: 600;
+  line-height: 60px;
+}
+
+.main img {
+  width: 38px;
+  margin-bottom: 30px;
+}
+
+.content {
+  padding: 60px;
 }/*# sourceMappingURL=style.css.map */
