--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 .wrap {
+  width: 100vw;
   height: 100%;
   display: flex;
 }
@@ -109,18 +110,41 @@ a {
   color: rgb(150, 150, 150);
 }
 
-.main .title {
-  font-size: 46px;
-  letter-spacing: -4px;
-  font-weight: 600;
-  line-height: 60px;
+.a {
+  padding: 40px;
+  aspect-ratio: 1/1;
+  border-radius: 30px;
 }
 
-.main img {
+.a1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #f9f9f9;
+  box-shadow: #98dffd inset 0px 0px 30px 0px;
+}
+.a1 .title {
+  font-size: 28px;
+  letter-spacing: -2px;
+  font-weight: 600;
+  color: #3c3c3c;
+}
+.a1 img {
   width: 38px;
   margin-bottom: 30px;
 }
 
+.a2 {
+  background-image: url(images/a2.jpeg);
+  background-size: cover;
+  background-position: 0% 0;
+  box-shadow: #d4d4d4 inset 0px 0px 30px 0px;
+}
+
 .content {
+  width: calc(100% - 240px);
   padding: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
 }/*# sourceMappingURL=style.css.map */
