--- a/style.scss
+++ b/style.scss
@@ -143,11 +143,62 @@ a {
     background-position: 0% 0;
     box-shadow: #d4d4d4 inset 0px 0px 30px 0px;
 }
-
 .content {
     width: calc( 100% - 240px );
-    padding: 60px;
+    
+}
+.middle {
+    padding: 60px 60px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+}
+
+header {
+    padding: 40px 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .page {
+        display: flex;
+        display: none;
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 4px;
+            font-weight: 200;
+            font-size: 10px;
+            color: rgb(40, 40, 40);
+            & + a {
+                margin-left: 2px;
+            }
+        }
+        i {
+            font-size: 12px;
+        }
+    }
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    img {
+        width: 70px;
+        border-radius: 20px;
+    }
+   
+    .sub {
+        margin-left: 10px;
+        .name {
+            font-weight: 500;
+            font-size: 11px;
+        }
+        .desc {
+            margin-top: 10px;
+            font-size: 10px;
+            color: rgb(80, 80, 80);
+            letter-spacing: -.8px;
+        }
+    }
 }
