--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 $font-family: 'PP Neue Montreal', Pretendard;
+$box-pd: 40px 40px;
 
 * {
     margin: 0;
@@ -33,7 +34,7 @@ a {
 }
 
 .ct {
-    background-color: #fff;
+    position: relative;
     width: 20%;
     width: 240px;
     padding: 40px;
@@ -75,7 +76,7 @@ a {
 
 .sub_category_list {
     margin:5px 0px 5px 16px;
-    border-left: 1px dashed rgb(226, 226, 226);
+    border-left: 0.5px dashed rgba(80,80,80);
     a {
         font-size: 10px!important;
         padding-left: 18px!important;
@@ -145,6 +146,9 @@ a {
 }
 .content {
     width: calc( 100% - 240px );
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     
 }
 .middle {
@@ -152,6 +156,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+    flex: 1;
 }
 
 header {
@@ -198,13 +203,12 @@ header {
             margin-top: 10px;
             font-size: 10px;
             color: rgb(80, 80, 80);
-            letter-spacing: -.8px;
+            letter-spacing: -.6px;
         }
     }
 }
 
-.category_wrapper .category_background {
-    border-radius: 12px;
+.category_background {
     bottom: 0;
     left: 0;
     overflow: hidden;
@@ -212,11 +216,12 @@ header {
     right: 0;
     top: 0;
     z-index: -1;
+    margin-top: 0!important;
 }
 
-.category_wrapper .backdrop {
-    backdrop-filter: blur(50px);
-    -webkit-backdrop-filter: blur(50px);
+.backdrop {
+    backdrop-filter: blur(110px);
+    -webkit-backdrop-filter: blur(110px);
     background: transparent;
     bottom: 0;
     left: 0;
@@ -226,7 +231,7 @@ header {
     z-index: 1;
 }
 
-.category_wrapper .category_background .elemColor {
+.category_background .elemColor {
     border-radius: 100%;
     height: 100%;
     left: 0;
@@ -239,7 +244,7 @@ header {
     width: 100%;
 }
 
-.category_wrapper .category_element {
+.category_element {
     -webkit-backdrop-filter: blur(0);
     display: flex;
     flex-direction: column;
@@ -249,4 +254,14 @@ header {
     position: relative;
     transition: padding .2s ease;
     width: 100%;
+}
+
+footer {
+    font-size: 9px;
+    padding: 40px 60px;
+    div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
