--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,8 @@ a {
 }
 
 .ct {
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 20%;
     width: 240px;
@@ -264,4 +266,14 @@ footer {
         justify-content: space-between;
         align-items: center;
     }
+}
+
+.site_menu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.menu {
+    flex: 1;
 }
