--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,7 @@ a {
 }
 
 .ct {
+    
     display: flex;
     flex-direction: column;
     position: relative;
@@ -43,11 +44,10 @@ a {
     height: 100%;
     overflow-y: scroll;
     /*box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 3px 0px;*/
-    border-right: 1px solid rgb(238, 242, 244);
     div + div { 
         margin-top: 25px;
         padding-top: 25px;
-        border-top: 1px solid rgb(238, 242, 244);
+        /*border-top: 1px solid rgb(238, 242, 244);*/
     }
 }
 .ct::-webkit-scrollbar {
@@ -141,10 +141,10 @@ a {
 }
 
 .a2 {
-    background-image: url(images/a2.jpeg);
+    background-image: url(images/ric.jpg);
     background-size: cover;
     background-position: 0% 0;
-    box-shadow: #d4d4d4 inset 0px 0px 30px 0px;
+    box-shadow: #ffffff inset 0px 0px 30px 0px;
 }
 .content {
     width: calc( 100% - 240px );
@@ -166,6 +166,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    h1 {
+        font-weight: 500;
+    }
     .page {
         display: flex;
         display: none;
@@ -193,6 +196,8 @@ header {
     img {
         width: 70px;
         border-radius: 20px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
    
     .sub {
@@ -260,11 +265,13 @@ header {
 
 footer {
     font-size: 9px;
-    padding: 40px 60px;
+    padding: 40px 60px 50px;
     div {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    a {
     }
 }
 
@@ -272,8 +279,34 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    i {
+        color: #333;
+        font-size: 7px;
+        transition: color .3s ease-in-out;
+    }
+   
 }
 
 .menu {
     flex: 1;
 }
+
+/*
+.tt_category {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 200ms linear, max-height 200ms linear;
+    will-change: opacity, max-height;
+}
+
+.cate_open {
+    cursor: pointer;
+}
+.cate_open[aria-expanded=true] + .tt_category {
+    opacity: 1;
+    max-height: 500px;
+    transition: all 200ms linear;
+    will-change: opacity, max-height;
+}
+*/
