--- a/style.scss
+++ b/style.scss
@@ -89,11 +89,12 @@ a {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-    font-size: 11px;
+    font-size: 9px;
     letter-spacing: -.8px;
-    font-weight: 500;
+    font-weight: 400;
+    color:rgb(40, 40, 40);
     i {
-        font-size: 7px;
+        font-size: 8px;
         margin-right: 10px;
         /* margin-bottom: 0px; */
         vertical-align: baseline;
@@ -111,7 +112,7 @@ a {
         padding: 10px;
         padding-left: 16px;
         font-family: $font-family;
-        font-size: 10px;
+        font-size: 9px;
         color: rgba(150,150,150);
     }
 }
@@ -141,10 +142,36 @@ a {
 }
 
 .a2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     background-image: url(images/ric.jpg);
     background-size: cover;
-    background-position: 0% 0;
+    background-position: center;
     box-shadow: #ffffff inset 0px 0px 30px 0px;
+    span {
+        letter-spacing: -.4px;
+        color: #fff;
+        border-radius: 20px;
+        padding: 10px 10px;
+        font-weight: 200;
+        font-size: 10px;
+    }
+    svg {
+        float: right;
+        stroke: #fff;
+    }
+    div {
+        flex: 1;
+        i {
+            float: right;
+            font-size: 24px;
+        }
+    }
+    img {
+        width: 30px;
+    }
+   
 }
 .content {
     width: calc( 100% - 240px );
@@ -164,10 +191,16 @@ a {
 header {
     padding: 40px 60px;
     display: flex;
+    
     justify-content: space-between;
     align-items: center;
     h1 {
-        font-weight: 500;
+        width: 100%;
+        text-align: center;
+        font-weight: 400;
+        font-size: 20px;
+        font-family: 'mosfaghet';
+        
     }
     .page {
         display: flex;
@@ -208,7 +241,7 @@ header {
         }
         .desc {
             margin-top: 10px;
-            font-size: 10px;
+            font-size: 9px;
             color: rgb(80, 80, 80);
             letter-spacing: -.6px;
         }
@@ -284,14 +317,15 @@ footer {
         font-size: 7px;
         transition: color .3s ease-in-out;
     }
-   
+    a:hover {
+        
+    }
 }
 
 .menu {
     flex: 1;
 }
 
-/*
 .tt_category {
     opacity: 0;
     max-height: 0;
@@ -309,4 +343,3 @@ footer {
     transition: all 200ms linear;
     will-change: opacity, max-height;
 }
-*/
